# fdi-pln2605

./: .gitignore  Info.txt  README.md  agent.conf  api_functions.py  brain.py  main.py  memory.py  p1.py  pyproject.toml  templates.py  tools.json  tools.py
new txt/: moby_dick.txt  peter_pan.txt  romeo_and_juliet.txt  the_odyssey.txt
p01/: codigo.py  main.py
p03/: scriptTraductor.py
p04/: 2000-h.htm  Documentation.md  README.md  buscador.py  buscadorToken.py  buscador_menu.py  buscador_menu2.py  chunk_tokenizer.py  pruebas.py  pyproject.toml
p04/src/fdi_pln_2605_p4/: main.py
p05/: BPETokenizer.py  __init__.py  attention.py  causal_llm.py  causal_train.py  corpus.py  model.py  tokenizer.py  transformer.py
