[project]
name = "fdi-pln-2605-p1"
version = "1.0.0"
description = "Agente diplomático autónomo para intercambio de recursos"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx",
    "requests",
    "ollama",
    "python-dotenv",
    "textual>=8.1.1",
    "beautifulsoup4>=4.14.3",
    "joblib>=1.5.3",
]

[project.scripts]
fdi-pln-2605-p1 = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = [
    "main.py",
    "brain.py",
    "api_functions.py",
    "tools.py",
    "tools.json",
    "templates.py",
    "memory.py",
]
