[project]
name = "fdi-pln-2605-p1"
version = "1.0.0"
description = "Agente diplomático autónomo para intercambio de recursos"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx",
    "requests",
    "ollama",
    "python-dotenv",
    "textual>=8.1.1",
    "beautifulsoup4>=4.14.3",
    "joblib>=1.5.3",
    "nltk>=3.9.3",
    "es-core-news-sm",
    "spacy>=3.8.11",
    "pip>=26.0.1",
    "torch   ",
    "loguru>=0.7.3",
]

[project.scripts]
fdi-pln-2605-p1 = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = [
    "main.py",
    "brain.py",
    "api_functions.py",
    "tools.py",
    "tools.json",
    "templates.py",
    "memory.py",
]

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.sources]
es-core-news-sm = { url = "https://github.com/explosion/spacy-models/releases/download/es_core_news_sm-3.8.0/es_core_news_sm-3.8.0-py3-none-any.whl" }
torch = { index = "pytorch-cu121" }