[project]
name = "fdi-pln-2605-p4"
version = "1.0"
description = "Buscador Clásico y Semántico del Quijote"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4",
    "numpy",
    "spacy",
    "typer",
    "rich",
    "es-core-news-md"
]

[project.scripts]
fdi-pln-2605-p4 = "fdi_pln_2605_p4.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
es-core-news-md = { url = "https://github.com/explosion/spacy-models/releases/download/es_core_news_md-3.8.0/es_core_news_md-3.8.0-py3-none-any.whl" }